--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start:convert-summary": "ts-node src/convertDistTagsToSummary.ts"
   },
   "devDependencies": {
-    "@types/node": "^22.15.18",
-    "ts-node": "^10.9.1",
+    "@types/node": "^24.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
-  }
-} 
+  },
+  "packageManager": "pnpm@10.13.1"
+}
