--- a/.github/workflows/weekly-analysis.yml
+++ b/.github/workflows/weekly-analysis.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     # Run every Monday at 2:00 AM UTC
     - cron: '0 2 * * 1'
-  workflow_dispatch: # Allow manual triggering
+  workflow_dispatch:
 
 jobs:
   analyze-packages:
@@ -12,20 +12,18 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Setup Node.js
-        uses: actions/setup-node@v4
+        uses: actions/setup-node@v5
         with:
-          node-version: '22'
+          node-version: '24'
           cache: 'pnpm'
 
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
-        with:
-          version: 10.13.1
 
       - name: Install dependencies
         run: pnpm install
