--- a/.github/workflows/weekly-analysis.yml
+++ b/.github/workflows/weekly-analysis.yml
@@ -1,10 +1,10 @@
 name: Weekly Package Analysis
 
 on:
+  workflow_dispatch:
   schedule:
     # Run every Monday at 2:00 AM UTC
     - cron: '0 2 * * 1'
-  workflow_dispatch:
 
 jobs:
   analyze-packages:
@@ -16,14 +16,17 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v5
+      - uses: pnpm/action-setup@v4
+        name: Install pnpm
         with:
-          node-version: '24'
-          cache: 'pnpm'
+          version: 10
+          run_install: false
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 24
+          cache: 'pnpm'
 
       - name: Install dependencies
         run: pnpm install
