--- a/.github/workflows/weekly-analysis.yml
+++ b/.github/workflows/weekly-analysis.yml
@@ -6,6 +6,9 @@ on:
     # Run every Monday at 2:00 AM UTC
     - cron: '0 2 * * 1'
 
+permissions:
+  contents: write
+
 jobs:
   analyze-packages:
     runs-on: ubuntu-latest
